[gd_scene load_steps=18 format=3 uid="uid://f0c5e4imh521"]

[ext_resource type="Script" path="res://Source/Settings.gd" id="1_ydrn0"]
[ext_resource type="FontFile" uid="uid://cibh2hon2txu4" path="res://Assets/Technical/Perun.ttf" id="2_vxdow"]

[sub_resource type="Gradient" id="Gradient_dx5pp"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dmx7u"]
gradient = SubResource("Gradient_dx5pp")
height = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8jck"]
bg_color = Color(0.364706, 0.364706, 0.364706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ris6y"]
bg_color = Color(0.411765, 0.411765, 0.411765, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aj143"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_553gk"]

[sub_resource type="ButtonGroup" id="ButtonGroup_nfvn5"]

[sub_resource type="Gradient" id="Gradient_envps"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lpbhu"]
gradient = SubResource("Gradient_envps")
height = 120

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tkj0k"]
bg_color = Color(0.529412, 0.0705882, 0.0509804, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bk8e8"]
bg_color = Color(0.658824, 0.0980392, 0.0745098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31sbr"]
bg_color = Color(0.270588, 0.0196078, 0.0117647, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvrpc"]

[sub_resource type="FontVariation" id="FontVariation_6ynrk"]
base_font = ExtResource("2_vxdow")

[sub_resource type="Theme" id="Theme_885n6"]
Button/font_sizes/font_size = 20
Button/fonts/font = ExtResource("2_vxdow")
Label/font_sizes/font_size = 20
Label/fonts/font = SubResource("FontVariation_6ynrk")

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ydrn0")

[node name="SettingsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gap" type="TextureRect" parent="SettingsContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dmx7u")

[node name="Settings Label" type="Label" parent="SettingsContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vxdow")
theme_override_font_sizes/font_size = 50
text = "Настройки"
horizontal_alignment = 1

[node name="Gap2" type="TextureRect" parent="SettingsContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dmx7u")

[node name="Settings Label2" type="Label" parent="SettingsContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vxdow")
theme_override_font_sizes/font_size = 30
text = "Уровень сложности"
horizontal_alignment = 1

[node name="Gap3" type="TextureRect" parent="SettingsContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dmx7u")

[node name="ButtonMedium" type="Button" parent="SettingsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("2_vxdow")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_w8jck")
theme_override_styles/hover = SubResource("StyleBoxFlat_ris6y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aj143")
theme_override_styles/focus = SubResource("StyleBoxEmpty_553gk")
toggle_mode = true
button_group = SubResource("ButtonGroup_nfvn5")
text = "Обычный"
metadata/_edit_use_anchors_ = true

[node name="ButtonHard" type="Button" parent="SettingsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("2_vxdow")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_w8jck")
theme_override_styles/hover = SubResource("StyleBoxFlat_ris6y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aj143")
theme_override_styles/focus = SubResource("StyleBoxEmpty_553gk")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_nfvn5")
text = "Сложный"
metadata/_edit_use_anchors_ = true

[node name="Gap4" type="TextureRect" parent="SettingsContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_lpbhu")

[node name="ResetLabel" type="Label" parent="SettingsContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vxdow")
theme_override_font_sizes/font_size = 30
text = "Сброс"
horizontal_alignment = 1

[node name="Gap5" type="TextureRect" parent="SettingsContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_dmx7u")

[node name="ButtonReset" type="Button" parent="SettingsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("2_vxdow")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_tkj0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_bk8e8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_31sbr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dvrpc")
text = "   СБРОСИТЬ ПРОГРЕСС   "
metadata/_edit_use_anchors_ = true

[node name="Gap6" type="TextureRect" parent="SettingsContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_lpbhu")

[node name="BackButton" type="Button" parent="SettingsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("2_vxdow")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_w8jck")
theme_override_styles/hover = SubResource("StyleBoxFlat_ris6y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_aj143")
theme_override_styles/focus = SubResource("StyleBoxEmpty_553gk")
toggle_mode = true
button_group = SubResource("ButtonGroup_nfvn5")
text = "Назад"
metadata/_edit_use_anchors_ = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
mode = 3
initial_position = 1
size = Vector2i(510, 150)
unresizable = true
borderless = true
extend_to_title = true
theme = SubResource("Theme_885n6")
ok_button_text = "Подтвердить"
dialog_text = "Вы уверены, что хотите сбросить файл сохранения?"
dialog_autowrap = true
cancel_button_text = "Отмена"

[connection signal="pressed" from="SettingsContainer/ButtonMedium" to="." method="set_diff" binds= [0]]
[connection signal="pressed" from="SettingsContainer/ButtonHard" to="." method="set_diff" binds= [1]]
[connection signal="pressed" from="SettingsContainer/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="SettingsContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
